# kinetic_ball

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  KEYBINDINGS_IMPLEMENTATION.md  README.md  REFACTORING_PLAN.md  WEBRTC_MIGRATION.md  fly.toml  gamepad.patch  matchbox_config.yaml.back  test_map_load.rs
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: keybindings.rs  main.rs
docs/adr/: 001-restructure-client-server-architecture.md  OAUTH_PROPOSAL.md
images/: kinetic_ball.webm
kinetic_ball/: Cargo.toml
kinetic_ball/assets/: cancha_grande.hbs
kinetic_ball/assets/shaders/: split_screen_compositor.wgsl
kinetic_ball/src/: assets.rs  color_utils.rs  components.rs  events.rs  keybindings.rs  local_players.rs  main.rs  resources.rs  states.rs
kinetic_ball/src/camera/: follow.rs  mod.rs  split_screen.rs
kinetic_ball/src/game/: input.rs  interpolation.rs  mod.rs  setup.rs
kinetic_ball/src/host/: engine.rs  host.rs  mod.rs  network.rs
kinetic_ball/src/host/input/: core.rs  mod.rs  network.rs
kinetic_ball/src/host/map/: converter.rs  loader.rs  mod.rs
kinetic_ball/src/networking/: client.rs  hmac_auth.rs  messages.rs  mod.rs
kinetic_ball/src/rendering/: field.rs  minimap.rs  mod.rs  player_visuals.rs
kinetic_ball/src/shared/: match_slots.rs  mod.rs  movements.rs  protocol.rs
kinetic_ball/src/spawning/: mod.rs
kinetic_ball/src/ui/: admin_panel.rs  create_room.rs  gamepad_config.rs  hosting.rs  local_players_setup.rs  menu.rs  mod.rs  room_selection.rs  settings.rs
kinetic_ball_server/: Cargo.toml
kinetic_ball_server/src/: auth.rs  main.rs  state.rs
kinetic_ball_server/src/api/: mod.rs  rooms.rs
kinetic_ball_server/src/ws/: proxy.rs
kinetic_ball_server/static/: index.html  openapi.yaml  swagger.html
kinetic_ball_server/static/images/: Screencast_20260206_213828.webm  clip_1_gameplay.webm  clip_2_action.webm
maps/: cancha_grande.hbs  cancha_grande.json5  futsal_fah.hbs  test_simple.json5
proxy/: Cargo.toml
proxy/src/: main.rs  state.rs
proxy/src/ws/: mod.rs  proxy.rs
server/: Cargo.toml
server/src/: engine.rs  main.rs  network.rs
server/src/input/: core.rs  network.rs
server/src/map/: converter.rs  loader.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  map.rs  movements.rs  protocol.rs
