[workspace]
resolver = "2"
members = [
    "server",
    "client",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Bevy
bevy = { version = "0.14"}
bevy_rapier2d = "0.27"

# Networking
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.7"

# Utilidades
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
