[workspace]
resolver = "2"
members = [
    "server",
    "client",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Bevy
bevy = { version = "0.17" }
bevy_rapier2d = "0.32"

# Networking - Matchbox (WebRTC para juegos Bevy)
matchbox_socket = "0.13"   # Cliente WebRTC para Bevy
tokio = { version = "1.40", features = ["full"] }  # Requerido por matchbox
# matchbox_server debe instalarse globalmente: cargo install matchbox_server
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.7"

# Utilidades
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
