[package]
name = "client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared", features = ["bevy"] }

# Bevy (con rendering completo)
bevy = { workspace = true }
bevy_rapier2d = { workspace = true, features = ["debug-render-2d"] }
bevy_egui = "0.28"

# Networking - Matchbox WebRTC
matchbox_socket = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }

# Utilidades
anyhow = { workspace = true }
clap = { workspace = true }
