[package]
name = "kinetic_ball"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kinetic_ball"
path = "src/main.rs"

[dependencies]
# Bevy (con rendering completo para cliente + física para host)
bevy = { workspace = true }
bevy_rapier2d = { workspace = true, features = ["simd-stable"] }
bevy_egui = "0.38"

# Networking - Matchbox WebRTC
matchbox_socket = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }

# Utilidades
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }

# Configuración y serialización
ron = "0.8"
dirs = "5.0"
json5 = "0.4"
serde_json = "1.0"

# HTTP client para REST API (rooms)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Clipboard access (wayland-data-control para soporte Wayland nativo)
arboard = { version = "3.4", features = ["wayland-data-control"] }
