[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared", features = ["bevy"] }

# Bevy (headless - sin rendering)
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_core_pipeline",
    "multi_threaded",
] }
bevy_rapier2d = { workspace = true, features = ["simd-stable"] }

# Networking - Matchbox WebRTC
matchbox_socket = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }

# Utilidades
anyhow = { workspace = true }
clap = { workspace = true }
json5 = "0.4"
serde_json = "1.0"
